--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,11 +213,13 @@ p {
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
+    /* parameters for the online reputation management header */
 }
 
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
+    /* parameters for the social media marketing header */
 }
 
 .footer {
@@ -225,8 +227,10 @@ p {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    /* sets parameters for the footer */
 }
 
 .footer h2 {
     font-size: 20px;
+    /* sets parameters for the footer's heading */
 }
