Updated all files, ready to deploy

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     /* changes background color of entire body section */
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -17,18 +17,18 @@ body {
     /* sets the font, color, and background color of main header. */
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
     /* sets the font size of the header and how it will be arranged on the page */
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
     /* Changes the color of the "seo" part of the header */
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -37,12 +37,12 @@ body {
     /* sets the spacing, font, size, and screen position of the navigation items */
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
     /* sets how a list of items will be arranged */
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
     /* sets how the specified items will be positioned on the screen */
@@ -81,7 +81,7 @@ p {
     /* beimg used to position an image from the right side */
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
